spring-postgres-k8s-local/spring-postgres-k8s-local/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: spring-demo
spec:
  ingressClassName: traefik
  rules:
    - host: spring.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-svc
                port:
                  number: 8080
